# FRQS-Widget

./: .gitignore  CMakeLists.txt  README.md
docs/: changelog_phase_4.md  design.md  note.md  project_directory_tree.md  report.md  structure.md
examples/: button_demo.cpp  checkbox_demo.cpp  combobox_demo.cpp  dashboard_demo.cpp  filedrop_demo.cpp  flex_layout_demo.cpp  hello_window.cpp  image_and_checkbox_demo.cpp  image_demo.cpp  kitchen_sink_demo.cpp  layout_demo.cpp  phase3_demo.cpp  scroll_demo.cpp  scroll_view_demo.cpp  scrollview_demo.cpp  setting_demo.cpp  virtual_list_demo.cpp  widget_demo.cpp  window_demo.cpp
include/: frqs-widget.hpp
include/core/: application.hpp  native_handle.hpp  window.hpp  window_id.hpp  window_registry.hpp
include/event/: event.hpp  event_bus.hpp  event_types.hpp  filedrop.hpp
include/meta/: arithmetic.hpp  concepts.hpp
include/platform/: message_queue.hpp  win32_safe.hpp
include/render/: dirty_rect.hpp  render_context.hpp  renderer.hpp  resource_cache.hpp
include/unit/: basic_paired.hpp  color.hpp  interface_paired_unit.hpp  interface_paired_unit_fwd.hpp  ipair.hpp  point.hpp  rect.hpp  size.hpp
include/widget/: button.hpp  checkbox.hpp  combobox.hpp  container.hpp  image.hpp  internal.hpp  iwidget.hpp  label.hpp  layout.hpp  list_adapter.hpp  list_view.hpp  scroll_view.hpp  slider.hpp  text_input.hpp  widget.hpp
src/: main.cpp
src/core/: application.cpp  window.cpp  window_impl.hpp  window_registry.cpp
src/event/: event_bus.cpp  event_dispatcher.cpp  spatial_dispatcher.hpp
src/platform/: filedrop.cpp  message_queue.cpp  win32_window.cpp
src/render/: dirty_rect.cpp  renderer_d2d.cpp  renderer_d2d.hpp  resource_cache.cpp
src/widget/: button.cpp  checkbox.cpp  combobox.cpp  container.cpp  image.cpp  label.cpp  layout.cpp  list_view.cpp  scroll_view.cpp  slider.cpp  text_input.cpp  widget.cpp
tests/: event_test.cpp  flex_layout_test.cpp  unit_test.cpp  window_test.cpp
